--- a/makeup.css
+++ b/makeup.css
@@ -3,6 +3,7 @@ body{
 }
 .navbar{
     display:flex;
+    justify-content: space-between;
     position: fixed;
     width: 100%;
     top:0px;
@@ -21,7 +22,8 @@ body{
     justify-content: flex-end;
     list-style: none;
     margin-top:30px;
-    margin-left:650px ;
+    margin-right: 30px;
+
 
 }
 .navbar-links a{
@@ -45,7 +47,6 @@ body{
     width:100%;
     margin-top: 60px;
     display: flex;
-    flex-direction: row;
 }
 .intro-content{
     padding:40px;
@@ -54,11 +55,11 @@ body{
     font-size:24px;
     font-family: 'Montserrat';
 }
-.intro-image img{
-    /* position: relative; */
-    width: 500px;
+.intro-image{
     margin-top: 40px;
-    /* margin-left:-30px; */
+}
+.intro-image img{
+    width: 400px;
 }
 .intro-content button{
     background-color: #FCAF02;
@@ -117,9 +118,6 @@ input[type="tel"], input[id="city"]{
     align-items: center;
     text-align: center;
 }
-.contact-section {
-    width: auto;
-}
 .contact-section button{
     width: 230px;
     padding:10px;
@@ -172,4 +170,46 @@ table tfoot td{
     background-color: #FCAF02;
     color:black;
     border-left: 2px black solid;
+}
+
+
+/* media queries */
+
+@media screen and (max-width:768px){
+
+    .navbar-links{
+        display: none;
+    }
+    .intro-section{
+        flex-direction: column-reverse;
+    }
+    .intro-content{
+        padding:10px;
+        font-size:18px;
+    }
+    .contact-section{
+        margin-top: 50px;
+    }
+    .contact-section h2{
+        font-size: 30px;
+        margin-left: 20px;  
+    }
+    input{
+        width: 90%;
+        height:24px;
+        font-size: 16px;
+        outline: none;
+        margin-left: 10px;
+    }
+    input[type="tel"], input[id="city"]{
+        width:42.5%;
+        margin-right: 0px;
+    }
+    thead{
+        height: 34px;
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 20px;
+    }
 }
