--- a/makeup.css
+++ b/makeup.css
@@ -137,6 +137,7 @@ input[type="tel"], input[id="city"]{
   /* TABLE STYLING */
 
 table{
+    width: 100%;
     border-collapse: collapse;
     width:100%;
     /* margin-left:50px; */
@@ -173,12 +174,26 @@ table tfoot td{
 }
 
 
-/* media queries */
+/* media querie */
 
 @media screen and (max-width:768px){
 
+    .navbar{
+        flex-direction: column;
+    }
+    .navbar-logo{
+        margin-left: 20px;
+    }
     .navbar-links{
-        display: none;
+    justify-content: space-between;
+     margin-top: -10px;
+     margin-left: -0px;
+     /* display: none; */
+    }
+    .navbar-links a{
+     font-size: 14px;
+     margin-left: -60px;
+     margin-right: 0px;
     }
     .intro-section{
         flex-direction: column-reverse;
@@ -195,15 +210,18 @@ table tfoot td{
         margin-left: 20px;  
     }
     input{
-        width: 90%;
+        width: 100%;
         height:24px;
         font-size: 16px;
         outline: none;
         margin-left: 10px;
     }
     input[type="tel"], input[id="city"]{
-        width:42.5%;
+        width:100%;
         margin-right: 0px;
+    }
+    table{
+        margin-left: 10px;
     }
     thead{
         height: 34px;
@@ -212,4 +230,15 @@ table tfoot td{
         font-weight: 400;
         font-size: 20px;
     }
+    .contact-section button{
+        width: 150px;
+        font-size: 20px;
+        padding:10px;
+        margin-top: 30px;
+    }
+    .intro-content button{
+        width: 120px;
+        font-size: 20px;
+    }  
+
 }
